--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         </article>
     </template>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
+
 </body>
 </html>
