--- a/index.html
+++ b/index.html
@@ -1,137 +1,245 @@
-<!
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ro">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Vlogul lui Razvan</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+        /* mici ajustări ca să nu depinzi de alte patch-uri */
+        .toolbar {
+            display: flex;
+            flex-wrap: wrap;
+            gap: .5rem;
+            align-items: center;
+            margin: 1rem 0
+        }
+
+        .spacer {
+            flex: 1
+        }
+
+        .muted {
+            opacity: .7
+        }
+
+        .ghost {
+            background: transparent;
+            border: 1px solid #444;
+            padding: .45rem .7rem;
+            border-radius: .5rem;
+            cursor: pointer
+        }
+
+        .primary {
+            background: #3b82f6;
+            border: 0;
+            color: #fff;
+            padding: .5rem .8rem;
+            border-radius: .55rem;
+            cursor: pointer
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill,minmax(320px,1fr));
+            gap: 1rem
+        }
+
+        article.card {
+            background: #111;
+            border: 1px solid #222;
+            border-radius: 12px;
+            overflow: hidden
+        }
+
+        .media iframe, .media video {
+            width: 100%;
+            aspect-ratio: 16/9;
+            border: 0;
+            display: block
+        }
+
+        .meta {
+            padding: .8rem
+        }
+
+        .tags {
+            display: flex;
+            gap: .35rem;
+            flex-wrap: wrap;
+            margin-top: .25rem
+        }
+
+        .tag {
+            border: 1px solid #333;
+            border-radius: 999px;
+            padding: .1rem .5rem;
+            font-size: .8rem
+        }
+
+        .cardActions {
+            display: flex;
+            gap: .5rem;
+            padding: .8rem;
+            border-top: 1px solid #222
+        }
+
+        .mini {
+            padding: .35rem .6rem;
+            border-radius: .45rem;
+            border: 1px solid #333;
+            background: transparent;
+            color: #ddd;
+            cursor: pointer
+        }
+
+        .danger {
+            border-color: #803;
+            color: #f88
+        }
+
+        .banner {
+            background: #0b1220;
+            border: 1px solid #1d2a44;
+            padding: .8rem 1rem;
+            border-radius: 12px;
+            margin-bottom: 1rem
+        }
+
+        dialog {
+            max-width: 640px;
+            border: 1px solid #333;
+            background: #0c0c0c;
+            color: #ddd;
+            border-radius: 12px
+        }
+
+            dialog form {
+                display: grid;
+                gap: .6rem
+            }
+
+        input, textarea, select {
+            background: #0f0f0f;
+            border: 1px solid #333;
+            border-radius: 8px;
+            color: #eee;
+            padding: .55rem .7rem
+        }
+
+        label {
+            font-size: .9rem;
+            opacity: .8
+        }
+
+        .row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: .6rem
+        }
+    </style>
 </head>
 <body>
-    <header class="container">
+    <main class="container">
         <h1>Vlogul lui Razvan</h1>
-        <p class="subtitle">Clipuri noi, zilnic. Cele mai recente apar primele.</p>
 
+        <!-- Bara de control -->
         <div class="toolbar">
-            <button id="btnAdd">+ Adaugă clip</button>
+            <!-- controale VIZIBILE pentru toți -->
             <input id="searchInput" type="search" placeholder="Caută titlu sau tag..." />
             <select id="tagFilter">
                 <option value="">— Filtrează după tag —</option>
             </select>
-            <select id="sortSelect" title="Sortare">
+            <select id="sortSelect">
                 <option value="newest">Noi → Vechi</option>
                 <option value="oldest">Vechi → Noi</option>
-                <option value="title">Titlu A→Z</option>
+                <option value="title">Titlu (A→Z)</option>
             </select>
-            <button id="btnExport" title="Exportă lista ca JSON">Export</button>
-            <label class="importLabel">
-                Import
-                <input id="importInput" type="file" accept="application/json" />
-            </label>
-        </div>
-    </header>
 
-    <main class="container">
-        <div id="infoBox" class="info">
-            Sfat: pentru clipurile <strong>.mp4 locale</strong>, folosește butonul „Adaugă clip” → „Fișier local”.
-            Linkurile YouTube sunt ideale pentru persistență. Datele se salvează în <em>localStorage</em>.
+            <span class="spacer"></span>
+
+            <!-- controale ADMIN (ascunse implicit) -->
+            <button id="btnAdd" class="primary" hidden>+ Adaugă clip</button>
+            <button id="btnExport" class="ghost" hidden>Export</button>
+            <button id="importBtn" class="ghost" hidden>Import</button>
+            <input id="importInput" type="file" accept="application/json" hidden />
+
+            <!-- autentificare -->
+            <div class="auth-controls" style="display:flex;gap:.5rem;align-items:center;">
+                <button id="loginBtn" class="ghost">Autentificare</button>
+                <button id="logoutBtn" class="ghost" style="display:none;">Ieșire</button>
+                <span id="who" class="muted"></span>
+            </div>
         </div>
 
+        <div class="banner muted">
+            Sfat: pentru clipurile <b>.mp4 găzduite</b> folosește un link direct (nu din PC). Linkurile YouTube sunt ideale.
+        </div>
+
+        <!-- grila -->
         <section id="grid" class="grid"></section>
-
-        <div class="center">
+        <div style="text-align:center;margin:1rem 0;">
             <button id="loadMore" class="ghost" hidden>Încarcă mai multe</button>
         </div>
-    </main>
 
-    <!-- Modal Add -->
-    <dialog id="addDialog">
-        <form method="dialog" class="dialog">
-            <h2>Adaugă un clip</h2>
+        <!-- dialog adăugare / editare -->
+        <dialog id="addDialog">
+            <form method="dialog">
+                <h3 style="margin:0 0 .2rem">Clip nou / Editează</h3>
 
-            <div class="tabs">
-                <button type="button" class="tab active" data-tab="youtube">Link YouTube / MP4</button>
-                <button type="button" class="tab" data-tab="local">Fișier local (.mp4)</button>
-            </div>
-
-            <div class="tabPanel" data-panel="youtube" style="display:block">
                 <label>
                     Titlu
-                    <input id="titleInput" type="text" placeholder="Ex: Vlog 6 septembrie" required />
+                    <input id="titleInput" placeholder="Titlu clip" />
                 </label>
 
                 <label>
-                    URL video (YouTube sau .mp4)
-                    <input id="urlInput" type="url" placeholder="https://youtu.be/… sau https://site.ro/video.mp4" />
+                    URL (YouTube sau .mp4 găzduit)
+                    <input id="urlInput" placeholder="https://www.youtube.com/watch?v=..." />
                 </label>
 
-                <label>
-                    Dată
-                    <input id="dateInput" type="date" />
-                </label>
-
-                <label>
-                    Tag-uri (separate prin virgulă)
-                    <input id="tagsInput" type="text" placeholder="daily, vlog, behind-the-scenes" />
-                </label>
-
-                <label>
-                    Descriere
-                    <textarea id="descInput" rows="3" placeholder="Ce se întâmplă în acest episod?"></textarea>
-                </label>
-            </div>
-
-            <div class="tabPanel" data-panel="local">
-                <div class="drop" id="dropZone">
-                    <p>Trage aici un fișier <strong>.mp4</strong> sau apasă pentru a alege</p>
-                    <input id="fileInput" type="file" accept="video/mp4" />
+                <div class="row">
+                    <label>
+                        Data
+                        <input id="dateInput" type="date" />
+                    </label>
+                    <label>
+                        Tag-uri (separate prin virgulă)
+                        <input id="tagsInput" placeholder="daily, vlog" />
+                    </label>
                 </div>
 
                 <label>
-                    Titlu
-                    <input id="localTitleInput" type="text" placeholder="Ex: Vlog 6 septembrie" />
+                    Descriere
+                    <textarea id="descInput" rows="3" placeholder="(opțional)"></textarea>
                 </label>
 
-                <label>
-                    Dată
-                    <input id="localDateInput" type="date" />
-                </label>
+                <div style="display:flex;gap:.6rem;justify-content:flex-end;margin-top:.2rem">
+                    <button class="ghost" value="cancel">Anulează</button>
+                    <button id="saveBtn" class="primary">Salvează</button>
+                </div>
+            </form>
+        </dialog>
 
-                <label>
-                    Tag-uri (separate prin virgulă)
-                    <input id="localTagsInput" type="text" placeholder="daily, vlog" />
-                </label>
+        <!-- template card -->
+        <template id="cardTpl">
+            <article class="card">
+                <div class="media"></div>
+                <div class="meta">
+                    <h3 class="title"></h3>
+                    <p class="date muted" style="margin:.15rem 0 0"></p>
+                    <p class="desc" style="margin:.35rem 0 0"></p>
+                    <div class="tags" style="margin:.35rem 0 0"></div>
+                </div>
+                <div class="cardActions">
+                    <button class="mini" data-action="edit">Editează</button>
+                    <button class="mini danger" data-action="delete">Șterge</button>
+                </div>
+            </article>
+        </template>
+    </main>
 
-                <small class="muted">
-                    Notă: fișierele locale sunt afișate printr-un link temporar (nu rămân după închiderea paginii).
-                    Pentru persistență, urcă pe YouTube sau găzduiește .mp4 online și folosește URL.
-                </small>
-            </div>
-
-            <menu class="dialogActions">
-                <button value="cancel" class="ghost">Anulează</button>
-                <button id="saveBtn" value="default" class="primary">Salvează</button>
-            </menu>
-        </form>
-    </dialog>
-
-    <template id="cardTpl">
-        <article class="card">
-            <div class="media"></div>
-            <div class="meta">
-                <h3 class="title"></h3>
-                <p class="date"></p>
-                <p class="desc"></p>
-                <div class="tags"></div>
-            </div>
-            <div class="cardActions">
-                <button class="mini" data-action="edit">Editează</button>
-                <button class="mini danger" data-action="delete">Șterge</button>
-            </div>
-        </article>
-    </template>
-
+    <!-- conectăm JS (modul) -->
     <script type="module" src="app.js"></script>
-
 </body>
 </html>
