--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Vlogul lui Razvan</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
-        /* mici ajustări ca să nu depinzi de alte patch-uri */
+        body {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 1.2rem;
+            color: #e5e7eb;
+            background: #0b0b0b;
+            font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Noto Sans",sans-serif
+        }
+
+        h1 {
+            font-size: 2.2rem;
+            margin: .2rem 0 1rem
+        }
+
         .toolbar {
             display: flex;
             flex-wrap: wrap;
@@ -25,9 +38,10 @@
 
         .ghost {
             background: transparent;
-            border: 1px solid #444;
+            border: 1px solid #333;
             padding: .45rem .7rem;
-            border-radius: .5rem;
+            border-radius: .55rem;
+            color: #ddd;
             cursor: pointer
         }
 
@@ -35,29 +49,39 @@
             background: #3b82f6;
             border: 0;
             color: #fff;
-            padding: .5rem .8rem;
-            border-radius: .55rem;
+            padding: .5rem .85rem;
+            border-radius: .6rem;
             cursor: pointer
+        }
+
+        input, select {
+            background: #111;
+            border: 1px solid #333;
+            border-radius: .55rem;
+            color: #ddd;
+            padding: .5rem .7rem
         }
 
         .grid {
             display: grid;
             grid-template-columns: repeat(auto-fill,minmax(320px,1fr));
-            gap: 1rem
+            gap: 1rem;
+            margin-top: 1rem
         }
 
         article.card {
-            background: #111;
+            background: #0f0f0f;
             border: 1px solid #222;
-            border-radius: 12px;
+            border-radius: 14px;
             overflow: hidden
         }
 
         .media iframe, .media video {
+            display: block;
             width: 100%;
             aspect-ratio: 16/9;
             border: 0;
-            display: block
+            background: #000
         }
 
         .meta {
@@ -68,20 +92,20 @@
             display: flex;
             gap: .35rem;
             flex-wrap: wrap;
-            margin-top: .25rem
+            margin-top: .35rem
         }
 
         .tag {
             border: 1px solid #333;
             border-radius: 999px;
-            padding: .1rem .5rem;
+            padding: .1rem .55rem;
             font-size: .8rem
         }
 
         .cardActions {
             display: flex;
             gap: .5rem;
-            padding: .8rem;
+            padding: .75rem;
             border-top: 1px solid #222
         }
 
@@ -96,61 +120,69 @@
 
         .danger {
             border-color: #803;
-            color: #f88
-        }
-
-        .banner {
-            background: #0b1220;
-            border: 1px solid #1d2a44;
-            padding: .8rem 1rem;
-            border-radius: 12px;
-            margin-bottom: 1rem
+            color: #f99
         }
 
         dialog {
-            max-width: 640px;
+            max-width: 700px;
             border: 1px solid #333;
             background: #0c0c0c;
-            color: #ddd;
-            border-radius: 12px
+            color: #e5e7eb;
+            border-radius: 14px
         }
 
             dialog form {
                 display: grid;
-                gap: .6rem
+                gap: .7rem
             }
 
-        input, textarea, select {
-            background: #0f0f0f;
+        textarea {
+            background: #111;
             border: 1px solid #333;
-            border-radius: 8px;
-            color: #eee;
-            padding: .55rem .7rem
-        }
-
-        label {
-            font-size: .9rem;
-            opacity: .8
+            border-radius: .6rem;
+            color: #ddd;
+            padding: .6rem
         }
 
         .row {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: .6rem
+            gap: .7rem
+        }
+
+        .seg {
+            display: inline-flex;
+            border: 1px solid #333;
+            border-radius: .6rem;
+            overflow: hidden
+        }
+
+            .seg button {
+                border: 0;
+                background: #0f0f0f;
+                color: #ddd;
+                padding: .5rem .8rem;
+                cursor: pointer
+            }
+
+                .seg button.active {
+                    background: #1b1b1b
+                }
+
+        progress {
+            width: 100%
         }
     </style>
 </head>
 <body>
-    <main class="container">
+    <main>
         <h1>Vlogul lui Razvan</h1>
 
         <!-- Bara de control -->
         <div class="toolbar">
-            <!-- controale VIZIBILE pentru toți -->
+            <!-- vizibil pentru toți -->
             <input id="searchInput" type="search" placeholder="Caută titlu sau tag..." />
-            <select id="tagFilter">
-                <option value="">— Filtrează după tag —</option>
-            </select>
+            <select id="tagFilter"><option value="">— Filtrează după tag —</option></select>
             <select id="sortSelect">
                 <option value="newest">Noi → Vechi</option>
                 <option value="oldest">Vechi → Noi</option>
@@ -159,77 +191,102 @@
 
             <span class="spacer"></span>
 
-            <!-- controale ADMIN (ascunse implicit) -->
+            <!-- admin only (ascunse implicit) -->
             <button id="btnAdd" class="primary" hidden>+ Adaugă clip</button>
             <button id="btnExport" class="ghost" hidden>Export</button>
             <button id="importBtn" class="ghost" hidden>Import</button>
             <input id="importInput" type="file" accept="application/json" hidden />
 
-            <!-- autentificare -->
-            <div class="auth-controls" style="display:flex;gap:.5rem;align-items:center;">
+            <!-- auth -->
+            <div style="display:flex;gap:.5rem;align-items:center;margin-left:.3rem">
                 <button id="loginBtn" class="ghost">Autentificare</button>
-                <button id="logoutBtn" class="ghost" style="display:none;">Ieșire</button>
+                <button id="logoutBtn" class="ghost" style="display:none">Ieșire</button>
                 <span id="who" class="muted"></span>
             </div>
         </div>
 
-        <div class="banner muted">
-            Sfat: pentru clipurile <b>.mp4 găzduite</b> folosește un link direct (nu din PC). Linkurile YouTube sunt ideale.
-        </div>
-
-        <!-- grila -->
+        <!-- Grilă clipuri -->
         <section id="grid" class="grid"></section>
         <div style="text-align:center;margin:1rem 0;">
             <button id="loadMore" class="ghost" hidden>Încarcă mai multe</button>
         </div>
 
-        <!-- dialog adăugare / editare -->
+        <!-- Dialog ADD/EDIT cu două opțiuni: Link / Upload -->
         <dialog id="addDialog">
             <form method="dialog">
-                <h3 style="margin:0 0 .2rem">Clip nou / Editează</h3>
+                <h3 style="margin:.2rem 0">Clip nou / Editează</h3>
 
-                <label>
-                    Titlu
-                    <input id="titleInput" placeholder="Titlu clip" />
-                </label>
-
-                <label>
-                    URL (YouTube sau .mp4 găzduit)
-                    <input id="urlInput" placeholder="https://www.youtube.com/watch?v=..." />
-                </label>
-
-                <div class="row">
-                    <label>
-                        Data
-                        <input id="dateInput" type="date" />
-                    </label>
-                    <label>
-                        Tag-uri (separate prin virgulă)
-                        <input id="tagsInput" placeholder="daily, vlog" />
-                    </label>
+                <div class="seg" role="tablist" aria-label="Tip sursă">
+                    <button type="button" id="tabLink" class="active" aria-selected="true">Link YouTube/.mp4</button>
+                    <button type="button" id="tabUpload" aria-selected="false">Upload .mp4</button>
                 </div>
 
-                <label>
-                    Descriere
-                    <textarea id="descInput" rows="3" placeholder="(opțional)"></textarea>
-                </label>
+                <!-- Panel: Link -->
+                <section id="panelLink">
+                    <label>
+                        Titlu
+                        <input id="titleInput" placeholder="Titlu clip" />
+                    </label>
+                    <label>
+                        URL (YouTube sau .mp4 găzduit)
+                        <input id="urlInput" placeholder="https://www.youtube.com/watch?v=..." />
+                    </label>
+                    <div class="row">
+                        <label>
+                            Data
+                            <input id="dateInput" type="date" />
+                        </label>
+                        <label>
+                            Tag-uri (virgulă)
+                            <input id="tagsInput" placeholder="daily, vlog" />
+                        </label>
+                    </div>
+                    <label>
+                        Descriere
+                        <textarea id="descInput" rows="3" placeholder="(opțional)"></textarea>
+                    </label>
+                </section>
 
-                <div style="display:flex;gap:.6rem;justify-content:flex-end;margin-top:.2rem">
+                <!-- Panel: Upload -->
+                <section id="panelUpload" style="display:none">
+                    <label>
+                        Fișier .mp4 (se urcă în cloud)
+                        <input id="fileInput" type="file" accept="video/mp4" />
+                    </label>
+                    <div class="row">
+                        <label>
+                            Titlu
+                            <input id="uTitleInput" placeholder="Titlu clip" />
+                        </label>
+                        <label>
+                            Data
+                            <input id="uDateInput" type="date" />
+                        </label>
+                    </div>
+                    <label>
+                        Tag-uri (virgulă)
+                        <input id="uTagsInput" placeholder="daily, vlog" />
+                    </label>
+                    <progress id="uploadProgress" value="0" max="100" hidden></progress>
+                    <div id="uploadInfo" class="muted"></div>
+                </section>
+
+                <div style="display:flex;gap:.6rem;justify-content:flex-end">
                     <button class="ghost" value="cancel">Anulează</button>
                     <button id="saveBtn" class="primary">Salvează</button>
                 </div>
             </form>
         </dialog>
 
-        <!-- template card -->
+        <!-- Template card -->
         <template id="cardTpl">
             <article class="card">
                 <div class="media"></div>
                 <div class="meta">
                     <h3 class="title"></h3>
-                    <p class="date muted" style="margin:.15rem 0 0"></p>
+                    <p class="date muted" style="margin:.2rem 0 0"></p>
                     <p class="desc" style="margin:.35rem 0 0"></p>
-                    <div class="tags" style="margin:.35rem 0 0"></div>
+                    <div class="tags"></div>
                 </div>
                 <div class="cardActions">
                     <button class="mini" data-action="edit">Editează</button>
@@ -239,7 +296,6 @@
         </template>
     </main>
 
-    <!-- conectăm JS (modul) -->
     <script type="module" src="app.js"></script>
 </body>
 </html>
