--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!docty
 <!doctype html>
 <html lang="ro">
 <head>
@@ -245,12 +246,18 @@
                         Descriere
                         <textarea id="descInput" rows="3" placeholder="(opțional)"></textarea>
                     </label>
+
+                    <!-- Vizibilitate pentru LINK -->
+                    <label class="inline-flex items-center gap-2" style="margin:.5rem 0;">
+                        <input id="visLink" type="checkbox" checked />
+                        <span>Public</span>
+                    </label>
                 </section>
 
                 <!-- Panel: Upload -->
                 <section id="panelUpload" style="display:none">
                     <label>
-                        Fișier .mp4 (se urcă în cloud)
+                        Fișier .mp4 (stocat local pe acest dispozitiv)
                         <input id="fileInput" type="file" accept="video/mp4" />
                     </label>
                     <div class="row">
@@ -267,6 +274,12 @@
                         Tag-uri (virgulă)
                         <input id="uTagsInput" placeholder="daily, vlog" />
                     </label>
+                    <!-- Vizibilitate pentru UPLOAD local -->
+                    <label class="inline-flex items-center gap-2" style="margin:.5rem 0;">
+                        <input id="visUpload" type="checkbox" checked />
+                        <span>Public</span>
+                    </label>
+
                     <progress id="uploadProgress" value="0" max="100" hidden></progress>
                     <div id="uploadInfo" class="muted"></div>
                 </section>
