Supabase: auth init + butoane

--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
 <body>
     <main>
         <h1>Vlogul lui Razvan</h1>
+        <!-- Auth controls (pentru Supabase) -->
+        <div id="authControls" style="display:flex; gap:8px; align-items:center;">
+            <button id="btnLogin">Loghează-te</button>
+            <button id="btnLogout" style="display:none">Delogare</button>
+        </div>
+
 
         <!-- Bara de control -->
         <div class="toolbar">
