Cloud: auth + upload + listare

--- a/index.html
+++ b/index.html
@@ -252,12 +252,18 @@
                         <textarea id="descInput" rows="3" placeholder="(opțional)"></textarea>
                     </label>
                 </section>
+                <label class="row">
+                    <input type="checkbox" id="chkPublicLink"> Public
+                </label>
 
                 <!-- Panel: Upload -->
                 <section id="panelUpload" style="display:none">
                     <label>
                         Fișier .mp4 (se urcă în cloud)
                         <input id="fileInput" type="file" accept="video/mp4" />
+                    </label>
+                    <label class="row">
+                        <input type="checkbox" id="chkPublicUpload"> Public
                     </label>
                     <div class="row">
                         <label>
